--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,427 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/*Header*/
+
 .header {
+  display: flex;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f1f1f1;
+  margin: 0 auto;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  background-image: url(../images/logo_place_header.svg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.logo_place_header {
+  position: absolute;
+  width: 182px;
+  height: 32px;
+  top:30px;
+  left:64px;
+}
+
+.header__title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 730px;
+  margin-left: 64px;
+  font-size: 102px;
+  font-weight: bold;
+  line-height:96px ;
+}
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header-link {
+  color: #2f80ed;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  top:64px;
+  right: 0;
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+}
+
 .header__square-pic {
+  position: absolute;
   height: 568px;
   width: 568px;
+  top:64px;
+  right:0;
+  background-color: #2f80ed;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+/*section description*/
+
+.description {
+  
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.two-columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width:80%;
+  margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+}
+
+.two-columns__brief {
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  width: 175px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.two-columns__main-text {
+  display: flex;
+  font-weight: normal;
+  flex-direction: column;
+  min-width: 784px;
+  width: 80%;
+}
+
+.two-columns__paragraph {
+  margin-bottom: 30px;
+  margin-top: 0;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.two-columns__paragraph_end {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bolder;
+}
+
+/*section digits*/
+
+.digits {
+  margin-top: 0;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.digits__section-title {
+  width:60%;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 1.5;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.digits__section-subtitle {
+  width: 60%;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  display: flex;
+  flex-flow:row wrap;
+  justify-content: space-between;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1100px;
+}
+
+.digits__table {
+  display: flex;
+  flex-flow:row wrap;
+  justify-content: space-between;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1100px;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size:24px;
+  font-weight: bold;
+  margin-bottom:20px;
+  margin-top:0;
+}
+
+.table__text {
+  margin-top:20px;
+  line-height:1.2;
+  font-size:18px;
+  font-weight: normal;
+}
+
+.table__text_bank {
+  margin-bottom: 0;
+}
+
+/*section feynman*/
+
+.feynman {
+  height: 890px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  background-image: url(../images/feynman.png);
+  background-position: left bottom;
+  background-repeat: no-repeat;
+}
+
+.feynman__title {
+  width:648px;
+  margin-top: 0;
+  margin-bottom: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+
+}
+
+.feynman__subtitle {
+  margin: 0 auto;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.feynman__link {
+  position: absolute;
+  height: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+/*section kaufman*/
+
+.kaufman {
+  background-color: #1f1f1f;
+  color: #ffff;
+  position: relative;
+  padding-bottom: 90px;
+  overflow: hidden;
+}
+
+.section-title {
+  margin-top: 90px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-top: 20px;
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table__theme_dark {
+  color: #ffff;
+  z-index: 1;
+}
+
+.table__cell {
+  margin-top: 60px;
+  width: 250px;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+
+.table__heading {
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right:-210px;
+  top: 0;
+}
+
+/* section footer*/
+
+.footer {
+  min-height: 350px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  background-color: #1f1f1f;
+  color: white;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-left:auto;
+  margin-right:auto;
+  min-height: 350px;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+  width: 183px;
+  height: 35px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.footer__column_content-copyright {
+  flex-basis: 711px;
+}
+
+.footer__author {
+  margin-top: 18px;
+  margin-bottom: 18px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.footer__column_content-info {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer__column-heading {
+  margin-bottom: 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  padding-left: 0;
+  margin-bottom: 16px;
+  line-height: 30px;
+  font-size: 18px;
+  list-style-type: none;
+}
+
+.footer__link-color {
+  color:#ffff;
+}
+
+.footer__social-icon {
+  background-size: contain;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.footer__column_content-social {
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*.footer__content-social a:link {
+  color:#fff;
+}
+
+.footer__content-social a:visited {
+  color: #fff;
+}
+
+.footer__column-links a:link {
+  color:#fff;
+}
+
+.footer__column-links a:visited {
+  color: #fff;
+} */
