--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@
   margin-left: 64px;
   font-size: 102px;
   font-weight: bold;
-  line-height:96px ;
+  line-height: 96px;
 }
 .header__subtitle {
   position: absolute;
@@ -52,7 +52,7 @@
   font-weight: normal;
 }
 
-.header-link {
+.header__link {
   color: #2f80ed;
 }
 
@@ -293,23 +293,11 @@
   z-index: 1;
 }
 
-.table__cell {
-  margin-top: 60px;
-  width: 250px;
-}
-
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
-}
-
-.table__heading {
-  margin-bottom: 20px;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: normal;
 }
 
 .table__text {
