--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,6 +1,5 @@
 .cards__title{
-  margin-top: 43px;
-  margin-bottom: 16px;
+  margin: 43px 0 16px;
   line-height: 1.15;
   font-size:24px;
   font-weight: bold;
