--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -1,7 +1,9 @@
 .khan__quote {
-  width: 790px;
+  width: 100%;
+  max-width: 790px;
   margin-top: 50px;
   margin-bottom: 36px;
   line-height: 34px;
   font-size: 24px;
+  margin-left: 0px;
 }
