--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,7 +1,8 @@
 .resources__logo-zone {
-  padding-top: 80px;
+  padding: 80px 0 0;
   margin: 0 auto;
   width: 1100px;
   display: flex;
   justify-content: space-between;
+  list-style: none;
 }
