--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -3,7 +3,8 @@
   flex-flow:row wrap;
   justify-content: space-between;
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   width: 1100px;
+  padding: 0;
+  list-style-type: none;
 }
