--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,8 +1,9 @@
 .video__iframe {
   width: 515px;
   height: 316px;
+  border: 0;
 }
 
-.video__iframe:last-child {
+.video__iframe:not(:first-child) {
   margin-left: 20px;
 }
