--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,6 +1,7 @@
 .header__title {
-  width: 730px;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
+  max-width: 730px;
+  width: 100%;
   font-size: 102px;
   font-weight: bold;
   line-height: 96px;
